--- a/explore.html
+++ b/explore.html
@@ -50,7 +50,27 @@
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
+                                <img src="images/users/hyeri_0609.jpg" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+                                    hyeri_0605
+                                </span>
+                                <span class="explore_list_item_info_name">
+                                    혜리
+                                </span>
+                            </div>
+                        </div>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="images/users/exo_baekhyunee.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
@@ -90,7 +110,87 @@
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
+                                <img src="images/users/hyeri_0609.jpg" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+                                    hyeri_0605
+                                </span>
+                                <span class="explore_list_item_info_name">
+                                    혜리
+                                </span>
+                            </div>
+                        </div>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="images/users/nasa.jpg" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+                                    hyeri_0605
+                                </span>
+                                <span class="explore_list_item_info_name">
+                                    혜리
+                                </span>
+                            </div>
+                        </div>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="images/users/exo_baekhyunee.jpg" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+                                    hyeri_0605
+                                </span>
+                                <span class="explore_list_item_info_name">
+                                    혜리
+                                </span>
+                            </div>
+                        </div>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="images/users/nasa.jpg" alt="" class="profile_image">
+                            </div>
+                            <div class="explore_list_item_info_name_id">
+                                <span class="explore_list_item_info_id">
+                                    hyeri_0605
+                                </span>
+                                <span class="explore_list_item_info_name">
+                                    혜리
+                                </span>
+                            </div>
+                        </div>
+                        <div class="follow_button">
+                            <butten>Follow</butten>
+                        </div>
+                    </div>
+                </li>
+                <li class="explore_list_item">
+                    <div class="explore_list_item_info">
+                        <div class="explore_list_item_info_detail">
+                            <div class="explore_list_item_info_image">
+                                <img src="images/users/hyeri_0609.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
@@ -130,107 +230,7 @@
                     <div class="explore_list_item_info">
                         <div class="explore_list_item_info_detail">
                             <div class="explore_list_item_info_image">
-                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
-                            </div>
-                            <div class="explore_list_item_info_name_id">
-                                <span class="explore_list_item_info_id">
-                                    hyeri_0605
-                                </span>
-                                <span class="explore_list_item_info_name">
-                                    혜리
-                                </span>
-                            </div>
-                        </div>
-                        <div class="follow_button">
-                            <butten>Follow</butten>
-                        </div>
-                    </div>
-                </li>
-                <li class="explore_list_item">
-                    <div class="explore_list_item_info">
-                        <div class="explore_list_item_info_detail">
-                            <div class="explore_list_item_info_image">
-                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
-                            </div>
-                            <div class="explore_list_item_info_name_id">
-                                <span class="explore_list_item_info_id">
-                                    hyeri_0605
-                                </span>
-                                <span class="explore_list_item_info_name">
-                                    혜리
-                                </span>
-                            </div>
-                        </div>
-                        <div class="follow_button">
-                            <butten>Follow</butten>
-                        </div>
-                    </div>
-                </li>
-                <li class="explore_list_item">
-                    <div class="explore_list_item_info">
-                        <div class="explore_list_item_info_detail">
-                            <div class="explore_list_item_info_image">
-                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
-                            </div>
-                            <div class="explore_list_item_info_name_id">
-                                <span class="explore_list_item_info_id">
-                                    hyeri_0605
-                                </span>
-                                <span class="explore_list_item_info_name">
-                                    혜리
-                                </span>
-                            </div>
-                        </div>
-                        <div class="follow_button">
-                            <butten>Follow</butten>
-                        </div>
-                    </div>
-                </li>
-                <li class="explore_list_item">
-                    <div class="explore_list_item_info">
-                        <div class="explore_list_item_info_detail">
-                            <div class="explore_list_item_info_image">
-                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
-                            </div>
-                            <div class="explore_list_item_info_name_id">
-                                <span class="explore_list_item_info_id">
-                                    hyeri_0605
-                                </span>
-                                <span class="explore_list_item_info_name">
-                                    혜리
-                                </span>
-                            </div>
-                        </div>
-                        <div class="follow_button">
-                            <butten>Follow</butten>
-                        </div>
-                    </div>
-                </li>
-                <li class="explore_list_item">
-                    <div class="explore_list_item_info">
-                        <div class="explore_list_item_info_detail">
-                            <div class="explore_list_item_info_image">
-                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
-                            </div>
-                            <div class="explore_list_item_info_name_id">
-                                <span class="explore_list_item_info_id">
-                                    hyeri_0605
-                                </span>
-                                <span class="explore_list_item_info_name">
-                                    혜리
-                                </span>
-                            </div>
-                        </div>
-                        <div class="follow_button">
-                            <butten>Follow</butten>
-                        </div>
-                    </div>
-                </li>
-                <li class="explore_list_item">
-                    <div class="explore_list_item_info">
-                        <div class="explore_list_item_info_detail">
-                            <div class="explore_list_item_info_image">
-                                <img src="images/users/jpark.jpg" alt="" class="profile_image">
+                                <img src="images/users/exo_baekhyunee.jpg" alt="" class="profile_image">
                             </div>
                             <div class="explore_list_item_info_name_id">
                                 <span class="explore_list_item_info_id">
