--- a/feed.html
+++ b/feed.html
@@ -38,7 +38,7 @@
                 </header>
 
                 <div class="photo_feed_img">
-                    <img src="images/instagram_logo.jpg" alt="#IMG">
+                    <img src="images/jpark_photo.jpg" alt="#IMG">
                 </div>
                 <div class="photo_info">
                     <div class="photo_actions">
