--- a/profile.html
+++ b/profile.html
@@ -25,51 +25,119 @@
         </nav>
         <main id="profile">
             <header class="profile_header">
-                <img src="images/users/heyri.png" alt="" class="profile_photo">
-                <div class="profile_info">
-                    <h1 class="profile_name">#PROFILE_NAME</h1>
-                    <a href="edit_profile.html">
-                        <button class="edit_profile_button">Edit Profile</button>
-                    </a>
-                    <i class="fa fa-cog"></i>
+                <img src="images/users/jpark.jpg" alt="" class="profile_photo">
+                <div class="profile_meta">
+                    <div class="profile_info">
+                        <h1 class="profile_name">JPark</h1>
+                        <a href="edit_profile.html">
+                            <button class="edit_profile_button">Edit Profile</button>
+                        </a>
+                        <i class="fa fa-cog"></i>
+                    </div>
+                    <ul class="profile_stat">
+                        <li class="profile_stat_item">
+                            <span class="profile_stat_label">
+                                34
+                            </span>
+                            <span class="profile_stat_number">
+                                posts
+                            </span>
+                        <li class="profile_stat_item">
+                            <span class="profile_stat_label">
+                                161
+                            </span>
+                            <span class="profile_stat_number">
+                                followers
+                            </span>
+                        </li>
+                        <li class="profile_stat_item">
+                            <span class="profile_stat_label">
+                                201
+                            </span>
+                            <span class="profile_stat_number">
+                                following
+                            </span>
+                        </li>
+                    </ul>
+
+                    <p class="profile_description">
+                        <span class=profile_description_name>
+                            JPark
+                        </span>
+                            Traveling the world forever. Previously: Bagan, Myanmar 🇲🇲 Now: Jeju, South Korea 🇰🇷 Next: ????
+                        <a href="" class="profile_description_homepage">
+                            JPark's Homepage
+                        </a>
+                    </p>
                 </div>
-                <ul class="profile_stat">
-                    <li class="profile_stat_item">
-                        <span class="profile_stat_label">
-                            #POST_COUNT
-                        </span>
-                        <span class="profile_stat_number">
-                            posts
-                        </span>
-                    <li class="profile_stat_item">
-                        <span class="profile_stat_label">
-                            #FOLLOWER_COUNT
-                        </span>
-                        <span class="profile_stat_number">
-                            followers
-                        </span>
-                    </li>
-                    <li class="profile_stat_item">
-                        <span class="profile_stat_label">
-                            #FOLLOWING_COUNT
-                        </span>
-                        <span class="profile_stat_number">
-                            following
-                        </span>
-                    </li>
-                </ul>
-                <p class="profile_description">
-                    <span class=profile_description_name>
-                        #PROFILE_DESCRIPTION_NAME
-                    </span>
-                    #DESCRIPTION
-                    <a href="" class="profile_description_homepage">
-                        #PROFILE_DESCRIPTION_HOMPAGE
-                    </a>
-                </p>
             </header>
 
             <div class="profile_image_grid">
+                <div class="profile_photo_row">
+                    <div class="phofile_photo">
+                        <img src="images/qab_550x230.png" alt="">
+                        <div>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-heart">504</i>
+                            </span>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-comment">22</i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile_photo_row">
+                    <div class="phofile_photo">
+                        <img src="images/qab_550x230.png" alt="">
+                        <div>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-heart">504</i>
+                            </span>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-comment">22</i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile_photo_row">
+                    <div class="phofile_photo">
+                        <img src="images/qab_550x230.png" alt="">
+                        <div>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-heart">504</i>
+                            </span>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-comment">22</i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile_photo_row">
+                    <div class="phofile_photo">
+                        <img src="images/qab_550x230.png" alt="">
+                        <div>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-heart">504</i>
+                            </span>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-comment">22</i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile_photo_row">
+                    <div class="phofile_photo">
+                        <img src="images/qab_550x230.png" alt="">
+                        <div>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-heart">504</i>
+                            </span>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-comment">22</i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
                 <div class="profile_photo_row">
                     <div class="phofile_photo">
                         <img src="images/qab_550x230.png" alt="">
