--- a/edit_profile.html
+++ b/edit_profile.html
@@ -24,80 +24,62 @@
             </div>
         </nav>
 
-        <main id="edit_profile">
-            <div class="edit_profile">
-                <div class="edit_profile_user">
-                    <img src="images/users/hyeri.png" alt="">
-                    <span class="edit_profile_userName">
-                        #USER_NAME
-                    </span>
-                </div>
-                <form  action="profile.html" method="profile" class="edit_profile_form">
-                    <div class="edit_profile_row">
-                        <label for="name">
-                            Name
-                        </label>
-                        <input type="text" name="name">
-                    </div>
-                    <div class="edit_profile_row">
-                        <label for="username">
-                            Username
-                        </label>
-                        <input type="text" name="username">
-                    </div>
-                    <div class="edit_profile_row">
-                        <label for="website">
-                            Website
-                        </label>
-                        <input type="text" name="website">
-                    </div>
-                    <div class="edit_profile_row">
-                        <label for="bio">
-                            Bio
-                        </label>
-                        <input type="textarea" name="bio">
-                    </div>
-                    <div class="edit_profile_row">
-                        <label for="email">
-                            Website
-                        </label>
-                        <input type="email" name="email">
-                    </div>
-                    <div class="edit_profile_row">
-                        <label for="phonenumber">
-                            Phone Number
-                        </label>
-                        <input type="number" name="phonenumber">
-                    </div>
-                    <div class="edit_profile_row">
-                        <label for="gender">
-                            Gender
-                        </label>
-                        <select id="gender">
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="whatever">Not specified</option>
-                        </select>
-                    </div>
-                    <div class="edit_profile_row">
-                        <span class="edit_profile_label">
-                            Similar Account Suggestions
-                        </span>
-                        <input type="checkbox" id="similar" checked>
-                        <span class="edit_profile_suggestion">
-                            Include your account when recommending similar accounts people might want to follow.
-                            <a href="#">
-                                [?]
-                            </a>
-                        </span>
-                    </div>
-                    <div class="edit_profile_row">
-                        <input type="submit" value="Submit">
-                    </div>
-                </form>
-            </div>
 
-        </main>
+          <main id="edit-profile">
+            <div class="edit-profile__container u-default-box">
+              <header class="edit-profile__header">
+                <div class="fucker-container">
+                  <img src="images/users/jpark.jpg" />
+                </div>
+                <h1 class="edit-profile__username">JPark</h1>
+              </header>
+              <form class="edit-profile__form">
+                <div class="edit-profile__row">
+                  <label class="edit-profile__label" for="name">Name</label>
+                  <input id="name" type="text" value="Nicolás Serrano Arévalo">
+                </div>
+                <div class="edit-profile__row">
+                  <label class="edit-profile__label" for="username">Username</label>
+                  <input id="username" type="text">
+                </div>
+                <div class="edit-profile__row">
+                  <label class="edit-profile__label" for="website">Website</label>
+                  <input id="website" type="url">
+                </div>
+                <div class="edit-profile__row">
+                  <label class="edit-profile__label" for="bio">Bio</label>
+                  <textarea id="bio"></textarea>
+                </div>
+                <div class="edit-profile__row">
+                  <label class="edit-profile__label" for="email">Email</label>
+                  <input id="email" type="email">
+                </div>
+                <div class="edit-profile__row">
+                  <label class="edit-profile__label" for="phone-number">Phone Number</label>
+                  <input id="phone-number" type="text">
+                </div>
+                <div class="edit-profile__row">
+                  <label class="edit-profile__label" for="gender">Gender</label>
+                  <select  id="gender">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="cant-remember" selected>Can't remember</option>
+                  </select>
+                </div>
+                <div class="edit-profile__row">
+                  <span class="edit-profile__label">Similar Account Suggestions</span>
+                  <div class="edit-profile__row_checkbox">
+                      <input id="similar" type="checkbox">
+                      <label for="similar">Include your account when recommending similar accounts people might want to follow.</label>
+                  </div>
+                </div>
+                <div class="edit-profile__row">
+                  <span class="edit-profile__label"></span>
+                  <input type="submit">
+                </div>
+              </form>
+            </div>
+          </main>
         <footer>
             <nav class="footer_nav">
                 <ul class="footer_list">
