--- a/explore.html
+++ b/explore.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -162,7 +162,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -202,7 +202,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
@@ -242,7 +242,7 @@
                             </div>
                         </div>
                         <div class="follow_button">
-                            <butten>Follow</butten>
+                            <button>Follow</button>
                         </div>
                     </div>
                 </li>
