--- a/profile.html
+++ b/profile.html
@@ -75,78 +75,78 @@
             <div class="profile_image_grid">
                 <div class="profile_photo_row">
                     <div class="phofile_photo">
-                        <img src="images/qab_550x230.png" alt="">
-                        <div>
+                        <img src="images/jpark_photo.jpg" alt="">
+                        <div class="profile_overlay">
                             <span class="profile_photo_overlay">
-                                <i class="fa fa-heart">504</i>
+                                <i class="fa fa-heart"></i>504
                             </span>
                             <span class="profile_photo_overlay">
-                                <i class="fa fa-comment">22</i>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile_photo_row">
-                    <div class="phofile_photo">
-                        <img src="images/qab_550x230.png" alt="">
-                        <div>
-                            <span class="profile_photo_overlay">
-                                <i class="fa fa-heart">504</i>
-                            </span>
-                            <span class="profile_photo_overlay">
-                                <i class="fa fa-comment">22</i>
+                                <i class="fa fa-comment"></i>22
                             </span>
                         </div>
                     </div>
                 </div>
                 <div class="profile_photo_row">
                     <div class="phofile_photo">
-                        <img src="images/qab_550x230.png" alt="">
-                        <div>
+                        <img src="images/jpark_photo.jpg" alt="">
+                        <div class="profile_overlay">
                             <span class="profile_photo_overlay">
-                                <i class="fa fa-heart">504</i>
+                                <i class="fa fa-heart"></i>504
                             </span>
                             <span class="profile_photo_overlay">
-                                <i class="fa fa-comment">22</i>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="profile_photo_row">
-                    <div class="phofile_photo">
-                        <img src="images/qab_550x230.png" alt="">
-                        <div>
-                            <span class="profile_photo_overlay">
-                                <i class="fa fa-heart">504</i>
-                            </span>
-                            <span class="profile_photo_overlay">
-                                <i class="fa fa-comment">22</i>
+                                <i class="fa fa-comment"></i>22
                             </span>
                         </div>
                     </div>
                 </div>
                 <div class="profile_photo_row">
                     <div class="phofile_photo">
-                        <img src="images/qab_550x230.png" alt="">
-                        <div>
+                        <img src="images/jpark_photo.jpg" alt="">
+                        <div class="profile_overlay">
                             <span class="profile_photo_overlay">
-                                <i class="fa fa-heart">504</i>
+                                <i class="fa fa-heart"></i>504
                             </span>
                             <span class="profile_photo_overlay">
-                                <i class="fa fa-comment">22</i>
+                                <i class="fa fa-comment"></i>22
                             </span>
                         </div>
                     </div>
                 </div>
                 <div class="profile_photo_row">
                     <div class="phofile_photo">
-                        <img src="images/qab_550x230.png" alt="">
-                        <div>
+                        <img src="images/jpark_photo.jpg" alt="">
+                        <div class="profile_overlay">
                             <span class="profile_photo_overlay">
-                                <i class="fa fa-heart">504</i>
+                                <i class="fa fa-heart"></i>504
                             </span>
                             <span class="profile_photo_overlay">
-                                <i class="fa fa-comment">22</i>
+                                <i class="fa fa-comment"></i>22
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile_photo_row">
+                    <div class="phofile_photo">
+                        <img src="images/jpark_photo.jpg" alt="">
+                        <div class="profile_overlay">
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-heart"></i>504
+                            </span>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-comment"></i>22
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile_photo_row">
+                    <div class="phofile_photo">
+                        <img src="images/jpark_photo.jpg" alt="">
+                        <div class="profile_overlay">
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-heart"></i>504
+                            </span>
+                            <span class="profile_photo_overlay">
+                                <i class="fa fa-comment"></i>22
                             </span>
                         </div>
                     </div>
