--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div class="login_box">
                     <img src="images/loginLogo.png" />
-                    <form action="feed.html" method="post" class="login_form">
+                    <form action="feed.html" method="get" class="login_form">
                         <input type="text" name="username" placeholder="Username" required>
                         <input type="password" name="password" placeholder="Password" required>
                         <input type="submit" value="Log in">
